# steptrace

./: .gitignore  README.md  demo.py  demo_async.py  pyproject.toml  steptrace.toml  steptrace.yaml
examples/: async_script.py  mixed_demo.py  simple_script.py
steptrace/: __init__.py  __main__.py  async_tracer.py  config.py  tracer.py
tests/: __init__.py  run_all_tests.py  test_all_options.py  test_async_tracer.py  test_cli.py  test_config.py  test_log_level.py  test_log_output.py  test_variable_mode.py
tracer/: tracer.py
